# llmint

./: .gitignore  CLAUDE.md  README.md  chain.go  chain_test.go  go.mod  integration_test.go  llmint.go  llmint_test.go
.github/: copilot-instructions.md
.github/workflows/: release.yml  test.yml
cabi/: Makefile  exports.go  libllmint.h
examples/basic/: main.go
examples/cascade/: main.go
examples/python/: basic.py
middleware/account/: account.go  account_test.go  sink.go  sink_test.go
middleware/batch/: batch.go  batch_test.go
middleware/cascade/: cascade.go  cascade_test.go  scorer.go  scorer_test.go
middleware/dedup/: dedup.go  dedup_test.go  store.go  store_test.go
middleware/distill/: distill.go  distill_test.go  library.go  library_test.go
middleware/promptcache/: promptcache.go  promptcache_test.go
provider/anthropic/: anthropic.go  anthropic_test.go  models.go
provider/mock/: mock.go  mock_test.go
provider/openai/: models.go  openai.go  openai_test.go
python/: pyproject.toml
python/src/llmint/: __init__.py  _ffi.py  middleware.py  providers.py  types.py
python/tests/: test_pipeline.py
